# federated-learning-privacy-system

./: .gitignore  LICENSE  README.md  flamby_isic_env_snapshot.txt  flamby_isic_requirements.txt  pyproject.toml  requirements.lock.txt  tatus
configs/: base.yaml
docs/: architecture.md  model_card.md  threat_model.md
scripts/: download_and_prepare_data.py  plot_privacy_utility.py  prepare_clients.py  run_experiment.py  run_sweep.py  train_centralized.py
src/fl_privacy_system/evaluation/: metrics.py
src/fl_privacy_system/fl/: aggregation.py  client.py  server.py
src/fl_privacy_system/utils/: dataset.py  seed.py
