[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-privacy-system"
version = "0.1.0"
description = "Privacy-preserving federated learning under non-IID data and client failure"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "tqdm>=4.66",

  "torch>=2.1",
  "opacus>=1.4",
  "mlflow>=2.9"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
